name:             FrABS
version:          0.1
Build-Type:       Simple
cabal-version:    >= 1.2
author:           Jonathan Thaler
maintainer:       Jonathan Thaler (thaler.jonathan@gmail.com)
category:         Agent-Based Simulation, Reactivity, FRP
synopsis:         Library for programming agent-based simulation in a pure functional, reactive style

description:      Domain-specific language embedded in Haskell for programming
                  agent-based simulation (mixed discrete-time and continuous-time) systems. FrABS is based on
                  Yampa, the concepts of Functional Reactive Programming (FRP) 

build-type:        Simple

library
  hs-source-dirs:  src
  ghc-options :    -O3 -Wall -Werror -fwarn-tabs -fno-warn-name-shadowing -threaded 
  build-depends:   base, 
                    Yampa,
                    gloss, 
                    random, 
                    containers, 
                    array, 
                    MonadRandom, 
                    split, 
                    fgl, 
                    transformers,
                    stm,
                    parallel,
                    titan-yampa-debugger

  -- install Yampa from https://github.com/ivanperez-keera/Yampa build using -fexpose-core

  exposed-modules:
    FRP.FrABS
    FRP.FrABS.Agent.Agent
    FRP.FrABS.Agent.Utils
    FRP.FrABS.Agent.Random
    FRP.FrABS.Agent.Monad
    FRP.FrABS.Agent.Reactive
    FRP.FrABS.Environment.Definitions
    FRP.FrABS.Environment.Spatial
    FRP.FrABS.Environment.Discrete
    FRP.FrABS.Environment.Continuous
    FRP.FrABS.Environment.Network
    FRP.FrABS.Environment.Utils
    FRP.FrABS.Extensions.After
    FRP.FrABS.Extensions.SuperSampling
    FRP.FrABS.Random.Monadic 
    FRP.FrABS.Random.Pure
    FRP.FrABS.Random.Reactive
    FRP.FrABS.Rendering.Discrete2d
    FRP.FrABS.Rendering.Continuous2d
    FRP.FrABS.Rendering.Network
    FRP.FrABS.Rendering.GlossSimulator
    FRP.FrABS.Simulation.Simulation
    FRP.FrABS.Simulation.Common
    FRP.FrABS.Simulation.Init
    FRP.FrABS.Simulation.Replication
    FRP.FrABS.Simulation.ParIteration      
    FRP.FrABS.Simulation.SeqIteration 
    FRP.FrABS.Simulation.Internal
    FRP.FrABS.SD.Definitions

-- unclear why ParIteration, SeqIteration & FrABS.Simulation.Utils need to be exposed. if not it leads to undefined symbol 

Test-Suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    .,
    src/tests/,
    src/
  main-is: Test.hs
  build-depends:
      base
    , tasty
    , tasty-hunit
    , tasty-smallcheck
    , tasty-quickcheck
  ghc-options:    -main-is Test 
  -- why the F*** is main-is not working???