name:              functionalReactiveABS
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable functionalReactiveABS
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base, Yampa, gloss, QuickCheck, random, containers
  ghc-options:      -O2
                    -- -eventlog
                    -- -rtsopts
                    -- -prof
                    -- -auto-all
                    -- -caf-all
                    -- -fforce-recomp
                    -- "-with-rtsopts= -s -hy -p -i0.1 -K256M"
                    -- "-with-rtsopts=-N"
                      -- use hc, hd or hy