name:              frABSExamples
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable frABSExamples
  main-is:         Main.hs
  -- hs-source-dirs:  src
  build-depends:   base, 
                    FrABS, 
                    Yampa,
                    gloss,
                    random,
                    containers,
                    array,
                    MonadRandom,
                    split,
                    fgl,
                    mtl,
                    transformers,
                    IfElse

  ghc-options:      -O2
                    -W
                    -- -Wall
                    -- -fwarn-tabs
                    -- -fno-warn-tabs
                    -- -threaded
                    -- -eventlog
                    -- -rtsopts
                    -- -prof
                    -- -auto-all
                    -- -caf-all
                    -- -fforce-recomp
                    -- "-with-rtsopts= -s -hy -p -i0.1 -K256M"
                    -- "-with-rtsopts=-N"
                      -- use hc, hd or hy

Test-Suite test_sugarscape
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    ., 
    SugarScape/Tests/
  main-is: Test.hs
  build-depends:
      base
    , tasty
    , tasty-hunit
    , tasty-smallcheck
    , tasty-quickcheck
    , FrABS
    , QuickCheck
    , HUnit
  ghc-options:    -main-is Test 
  -- why the FUCK is main-is not working???