name:              frABSExamples
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable frABSExamples
  main-is:         Main.hs
  -- hs-source-dirs:  src
  build-depends:   base, 
                    FrABS, 
                    Yampa, 
                    gloss,
                    random,
                    containers,
                    array,
                    MonadRandom,
                    split,
                    fgl,
                    mtl,
                    transformers,
                    IfElse

-- install Yampa from https://github.com/ivanperez-keera/Yampa build using -fexpose-core

  ghc-options:      -O2
                    -W
                    -threaded
                    -- -prof
                    -- "-with-rtsopts= -s -hy -p -i0.1 -K256M"
                    -- -auto-all
                    -- -caf-all
                    -- -fforce-recomp
                    -- -Wall
                    -- -fwarn-tabs
                    -- -fno-warn-tabs
                    -- -threaded
                    -- -eventlog
                    -- -rtsopts
                    -- -prof
                    -- -auto-all
                    -- -caf-all
                    -- -fforce-recomp
                    -- "-with-rtsopts=-N"
                      -- use hc, hd or hy

executable SamplingTests
  main-is:         Main.hs
  hs-source-dirs:  SamplingTests/

  build-depends:   base, 
                    FrABS, 
                    Yampa,
                    parallel

  ghc-options:      -O2
                    -W
                    -threaded
              

Test-Suite test_sugarscape
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    ., 
    SugarScape/Tests/
  main-is: Test.hs
  build-depends:
      base
    , tasty
    , tasty-hunit
    , tasty-smallcheck
    , tasty-quickcheck
    , FrABS
    , QuickCheck
    , HUnit
  ghc-options:    -main-is Test 
  -- why the F*** is main-is not working???

Test-Suite test_frSIR
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    .,
    FrSIR/Tests/
  main-is: Test.hs
  build-depends:
      base
    , tasty
    , tasty-hunit
    , tasty-smallcheck
    , tasty-quickcheck
    , FrABS
    , QuickCheck
    , HUnit
    , stm
  ghc-options:    -main-is Test 
  -- why the F*** is main-is not working???