name:              HerosAndCowards
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable HerosAndCowards
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base, Yampa, GLFW, OpenGL, random, monad-par, deepseq, parallel
  ghc-options:      -threaded
                    -auto-all
                    -fforce-recomp
                    -fprof-auto
                    -prof
                    "-with-rtsopts=-N -p -s -h -i0.1"
