name:              HerosAndCowardsIO
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.24

executable HerosAndCowardsIO
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base, Yampa,  GLFW, OpenGL, gloss, random, monad-par, deepseq, parallel
  default-language: Haskell2010
  ghc-options:      -threaded
                    -fprof-auto
                    "-with-rtsopts=-N -s -h -i0.1"
