name: SpaceInvaders
version: 0.4.2
cabal-Version: >= 1.2
license: BSD3
license-file: LICENSE
author: Henrik Nilsson, Antony Courtney
maintainer: George Giorgidze (GGG at CS dot NOTT dot AC dot UK)
homepage: http://www.haskell.org/yampa/
category: Game
synopsis: Video game
description: Video game implemented in Yampa. 
build-type: Simple

executable spaceInvaders
  hs-source-dirs:  src
  ghc-options : -threaded -O3 -Wall -fno-warn-name-shadowing
  build-Depends: base >= 3 && < 5, array, random, HGL, Yampa >= 0.9.2
  main-is: Main.hs
  Extensions: Arrows
  Other-Modules:
    Animate
    ColorBindings
    Colors
    Command
    Diagnostics
    IdentityList
    Object
    ObjectBehavior
    Parser
    PhysicalDimensions
    RenderLandscape
    RenderObject
    WorldGeometry
