Name:		YFrobAFPDemos
Version:	0.1
Cabal-Version:	>= 1.2
License:	BSD3
License-File:	../LICENSE
Copyright:	(c) 2002-2009 Hanrik Nilsson and Yale University
Author:		Henrik Nilsson
Maintainer:	Henrik Nilsson (nhn@cs.nott.ac.uk)
Homepage:	http://www.haskell.org/yampa/
Category:	Reactivity, FRP, Yampa, YFrob 
Synopsis:	AFP 2002 YFrob demonstrations
Description:
  A suite of YFrob demonstrations originating form the Summer School on
  Advanced Functional Programming (AFP) 2002. A (very) simple text-based
  user interface is used to select a demonstration to run. To get back
  to the user interface, close the demonstration window.
Tested-With:	GHC
Build-Type:	Simple

Executable afp-demos
  GHC-Options : -O2 -Wall -fno-warn-name-shadowing
  Build-Depends: base, YFrob >= 0.4
  Main-Is:	Main.hs
  Other-Modules:
    AFPDemos
    ITest
