Name:		YFrobRobotSimTest
Version:	0.1
Cabal-Version:	>= 1.2
License:	BSD3
License-File:	../LICENSE
Copyright:	(c) 2002-2009 Hanrik Nilsson and Yale University
Author:		Henrik Nilsson
Maintainer:	Henrik Nilsson (nhn@cs.nott.ac.uk)
Homepage:	http://www.haskell.org/yampa/
Category:	Reactivity, FRP, Yampa, YFrob 
Synopsis:	Test of YFrob robot simulator
Description:
  Simple test of of the YFrob robot simulator. Just to make sure things can
  be comiled and that basic graphics can be displayed on the screen.
Tested-With:	GHC
Build-Type:	Simple

Executable robotsim-test
  GHC-Options : -O2 -Wall -fno-warn-name-shadowing
  Build-Depends: base, YFrob >= 0.4
  Main-Is:	Main.hs
