name:              SpatialGameSimple
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable SpatialGameSimple
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:    base, containers, gloss, random, parallel
  ghc-options:      -O2
                    -- -threaded
                    -- -eventlog
                    -- -rtsopts
                    -prof
                    -- -auto-all
                    -- -caf-all
                    -- -fforce-recomp
                    "-with-rtsopts=-s -hy -p -i0.1 -K256M"
                      -- use hc, hd or hy
